deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wan-lab-manager
spec:
  ingressClassName: traefik
  rules:
    - host: wanlab.sophizo.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wan-lab-manager
                port:
                  number: 8080
